--- a/.github/workflows/scheduled-task.yml
+++ b/.github/workflows/scheduled-task.yml
@@ -4,6 +4,8 @@ on:
   schedule:
     # Runs every 5 minutes
     - cron: '*/5 * * * *'
+  # Add manual trigger
+  workflow_dispatch:
 
 jobs:
   run-scheduled-task:
