--- a/.github/workflows/scheduled-task.yml
+++ b/.github/workflows/scheduled-task.yml
@@ -13,7 +13,15 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       
-      - name: Run your task
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+          
+      - name: Install dependencies
         run: |
-          echo "Running scheduled task"
-          # Add your commands here
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          
+      - name: Run app.py
+        run: python app.py
