--- a/.github/workflows/scheduled-task.yml
+++ b/.github/workflows/scheduled-task.yml
@@ -2,8 +2,8 @@ name: Scheduled Task
 
 on:
   schedule:
-    # Runs every 5 minutes
-    - cron: '*/5 * * * *'
+    # Runs once a day at midnight UTC
+    - cron: '0 0 * * *'
   # Add manual trigger
   workflow_dispatch:
 
